# web_scraper_livros

./: .gitignore  README.md  main.py  pyproject.toml
livraria_da_vila/: config.py  start.py
livraria_da_vila/parsers/: vtex_parser.py
livraria_da_vila/scraper/: categories.py  listings.py  products.py
livrarias_curitiba/: config.py  start.py
livrarias_curitiba/parsers/: vtex_parser.py
livrarias_curitiba/scraper/: categories.py  listings.py  products.py
martins_fontes/: config.py  start.py
martins_fontes/parsers/: vtex_parser.py
martins_fontes/scraper/: categories.py  listings.py  products.py
nova_fronteira/: config.py  start.py
nova_fronteira/parsers/: html_parser.py
nova_fronteira/scraper/: categories.py  listings.py  products.py
shared/: models.py  silver.py
shared/database/: connection.py
shared/storage/: bronze_silver.py
shared/utils/: http.py  logging.py
travessa/: config.py  start.py
travessa/parsers/: html_parser.py
travessa/scraper/: categories.py  listings.py  products.py
